[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graph-context"
version = "6.2.0"
description = "MCP server for intelligent code context — 87%+ token savings with zero resource overhead"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["mcp", "code-context", "ast", "bm25", "coding-assistant", "token-optimization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
full = [
    "jieba",
    "watchdog",
]
dev = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/yuqiaohan95/graph-context"
Repository = "https://github.com/yuqiaohan95/graph-context"
Issues = "https://github.com/yuqiaohan95/graph-context/issues"

[project.scripts]
graph-context = "graph_context:main"

[tool.hatch.build.targets.wheel]
packages = ["graph_context"]
